page modification and enhancement

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     </nav>
     <main>
         <div class="hero-img">
-            <img class="hero-image" src="images/chatbot.png" alt="">
+            <img class="hero-image" src="images/heroimg.png" alt="">
+            <p class="hr-c">Every Man That Has A Brain Has A Purpose</p>
         </div>
         <h2>TAKE SURVEY</h2>
             <hr style=" border: 2px solid green; max-width: 110px; margin: 0 auto; position: relative; right: 30px;">
@@ -33,31 +34,31 @@
                     <p>Quick Survey</p>
                 </div>
                 <div class="suv">
-                    <p>Quick Survey</p>
+                    <p>Academic Survey</p>
                 </div>
                 <div class="suv">
-                    <p>Quick Survey</p>
+                    <p>Career Survey</p>
                 </div>
                 <div class="suv">
-                    <p>Quick Survey</p>
+                    <p>Medical Survey</p>
                 </div>
                 <div class="suv">
-                    <p>Quick Survey</p>
+                    <p>Job Survey</p>
                 </div>
                 <div class="suv">
-                    <p>Quick Survey</p>
+                    <p>General Survey</p>
                 </div>
                 <div class="suv">
-                    <p>Quick Survey</p>
+                    <p>Child support Survey</p>
                 </div>
                 <div class="suv">
-                    <p>Quick Survey</p>
+                    <p>Mental wellness Survey</p>
                 </div>
                 <div class="suv">
-                    <p>Quick Survey</p>
+                    <p>Food support Survey</p>
                 </div>
                 <div class="suv">
-                    <p>Quick Survey</p>
+                    <p>Questions and Answers</p>
                 </div>
             </div>
     </main>
