--- a/opportunities.html
+++ b/opportunities.html
@@ -27,7 +27,7 @@
         <!-- start -->
         <div class="barbing">
         <fieldset>
-            <legend>Brigham Young University Pathway World-Wide</legend>
+            <legend>BRIGHAM YOUNG UNIVERSITY PATHWAY WORLD-WIDE</legend>
             <img class="img-barb" src="images/byu.png" alt="">
             <div class="art-b">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi perspiciatis soluta sint explicabo quo facere dolores enim ipsa cumque atque voluptas nesciunt, temporibus, dignissimos sit placeat velit sequi odit distinctio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolores nihil sed quo ipsam repellat itaque animi culpa doloremque recusandae expedita tempore, inventore neque iure modi reiciendis tempora nisi soluta! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore dicta labore veritatis illo itaque praesentium, nemo cum deleniti laboriosam beatae laborum ipsam incidunt voluptates molestiae optio! Quia vitae provident in! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus at quaerat voluptate, facilis facere dicta ducimus inventore mollitia odio sunt eum asperiores ad sint voluptates dolore, repellat sapiente minus tempore! lorem</p>
@@ -43,11 +43,15 @@
                  <!-- start -->
         <div class="barbing">
         <fieldset>
-            <legend>Perpetual Educational Fund Loan</legend>
-            <img class="img-barb" src="images/hero.jpg" alt="">
+            <legend>FREE SKILLS ACQUSITION PROGRAMME </legend>
+            <img class="img-barb" src="images/skills.jpg" alt="" height="300">
             <div class="art-b">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi perspiciatis soluta sint explicabo quo facere dolores enim ipsa cumque atque voluptas nesciunt, temporibus, dignissimos sit placeat velit sequi odit distinctio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolores nihil sed quo ipsam repellat itaque animi culpa doloremque recusandae expedita tempore, inventore neque iure modi reiciendis tempora nisi soluta! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore dicta labore veritatis illo itaque praesentium, nemo cum deleniti laboriosam beatae laborum ipsam incidunt voluptates molestiae optio! Quia vitae provident in! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus at quaerat voluptate, facilis facere dicta ducimus inventore mollitia odio sunt eum asperiores ad sint voluptates dolore, repellat sapiente minus tempore! lorem</p>
+            <div class="bt-options">
+            <!-- <button class="join">Read More</button> -->
             <button class="join">Join Us</button>
+            <button class="join">Connect</button>
+            </div>
             </div>
         </fieldset>
         </div>
@@ -55,11 +59,14 @@
                  <!-- start -->
         <div class="barbing">
         <fieldset>
-            <legend>HAIR DRESSING SKILLS</legend>
-            <img class="img-barb" src="images/hero.jpg" alt="">
+            <legend>The Perpetual Education Fund Loan</legend>
+            <img class="img-barb" src="images/pef.png" alt="">
             <div class="art-b">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi perspiciatis soluta sint explicabo quo facere dolores enim ipsa cumque atque voluptas nesciunt, temporibus, dignissimos sit placeat velit sequi odit distinctio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolores nihil sed quo ipsam repellat itaque animi culpa doloremque recusandae expedita tempore, inventore neque iure modi reiciendis tempora nisi soluta! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore dicta labore veritatis illo itaque praesentium, nemo cum deleniti laboriosam beatae laborum ipsam incidunt voluptates molestiae optio! Quia vitae provident in! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus at quaerat voluptate, facilis facere dicta ducimus inventore mollitia odio sunt eum asperiores ad sint voluptates dolore, repellat sapiente minus tempore! lorem</p>
-            <button class="join">Join Us</button>
+            <div class="bt-options">
+            <a href="https://www.churchofjesuschrist.org/life/education/perpetual-education-fund?lang=eng"><button class="join">Read More</button></a>
+            <button class="join">Connect</button>
+            </div>
             </div>
         </fieldset>
         </div>
