--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         <hr style=" border: 2px solid green; max-width: 110px; margin: 0 auto; position: relative; right: 30px;">
         <div class="purpose">
             <ol>
-                <li><p><span style="font-weight: bolder;">Preach The Gospel:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis laboriosam expedita sunt numquam facere reiciendis, enim culpa accusantium perferendis quibusdam molestiae animi. Et magnam mollitia ratione necessitatibus, illum dolorem corporis!</p></li>
+                <li><p><span style="font-weight: bolder;">Preach The Gospel: </span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti repellendus obcaecati illum molestiae quod distinctio beatae dicta nisi ratione quas harum accusantium quaerat, id iure delectus rerum in nam quasi!</p></li>
                 <li><p><span style="font-weight: bolder;">Job Opportunities:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit illo quas neque sint hic, ex optio. Delectus amet minus ipsum et soluta nihil? Neque adipisci dolore, quia optio delectus laudantium!</p></li>
                 <li><p><span style="font-weight: bolder;">Quality Education: </span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni illum beatae earum, mollitia facilis praesentium ipsa dolores assumenda ex sequi ipsam voluptates corrupti dolorem. Iusto soluta consequatur ipsam corporis eos?</p></li>
                 <li><p><span style="font-weight: bolder;">Empowerment: </span> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla nesciunt sed ea. Blanditiis mollitia facilis id optio atque, vel, hic quae voluptatum, voluptate incidunt voluptatem quaerat est doloribus quisquam! Quos?</p></li>
@@ -35,17 +35,6 @@
                 <li><p><span style="font-weight: bolder;">Counselling:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis commodi provident dolore, quos expedita fuga at natus alias rerum nemo voluptate placeat ullam veniam, soluta doloremque dignissimos! Expedita, nihil fuga.</p></li>
                 <li><p><span style="font-weight: bolder;">Child Support:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit corrupti vero optio. Ex maxime blanditiis ut dolor sunt. Excepturi voluptatum aliquam libero consequatur, natus odio adipisci commodi minima dolore laboriosam?</p></li>
                 <li><p><span style="font-weight: bolder;">Academic support:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quaerat rem, repellendus tempore iste officia ipsum itaque aspernatur nobis mollitia dicta, expedita repudiandae recusandae. Possimus nulla repellat tempore quibusdam soluta.</p></li>
-                <li><p></p></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
             </ol>
         </div>
     </main>
