--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
     </nav>
     <main>
         <div class="hero-img">
-            <img class="hero-image" src="images/heroimg.png" alt="">
-            <p class="hr-c">Every Man That Has A Brain Has A Purpose</p>
+            <img class="hero-image" src="images/heroimg.png" alt="" loading="lazy">
+            <p class="hr-c message" id="message">Every Man That Has A Brain Has A Purpose</p>
         </div>
         <h2>TAKE SURVEY</h2>
             <hr style=" border: 2px solid green; max-width: 110px; margin: 0 auto; position: relative; right: 30px;">
+            <div class="w-suv">
+            <h3>Why Should you take these surveys? </h3>
+            <p>Taking surveys help us to understand your needs better and provide you with relevant opportunities and support. Your feedback is crucial in shaping our programs and services to better serve you and the community. By participating in these surveys, you contribute to the growth and improvement of Feed The Nation, ensuring that we can continue to make a positive impact.</p>
+            </div>
             <div class="survey">
                 <div class="suv">
                     <p>Quick Survey</p>
@@ -65,5 +69,6 @@
     <footer>
         <p>&copy;2025 OE Design</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
