compressed hero image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
     <main>
         <div class="hero-img">
-            <img class="hero-image" src="images/heroimg.png" alt="" loading="lazy">
+            <img class="hero-image" src="images/banner.webp" alt="" loading="lazy">
             <p class="hr-c message" id="message">Every Man That Has A Brain Has A Purpose</p>
         </div>
         <h2>TAKE SURVEY</h2>
