added external link

--- a/opportunities.html
+++ b/opportunities.html
@@ -32,8 +32,8 @@
             <div class="art-b">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi perspiciatis soluta sint explicabo quo facere dolores enim ipsa cumque atque voluptas nesciunt, temporibus, dignissimos sit placeat velit sequi odit distinctio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolores nihil sed quo ipsam repellat itaque animi culpa doloremque recusandae expedita tempore, inventore neque iure modi reiciendis tempora nisi soluta! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore dicta labore veritatis illo itaque praesentium, nemo cum deleniti laboriosam beatae laborum ipsam incidunt voluptates molestiae optio! Quia vitae provident in! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus at quaerat voluptate, facilis facere dicta ducimus inventore mollitia odio sunt eum asperiores ad sint voluptates dolore, repellat sapiente minus tempore! lorem</p>
             <div class="bt-options">
-            <button class="join">Read More</button>
-            <button class="join">Apply</button>
+            <a href="https://www.byupathway.edu/admissions/application-process#advanced-path" target="_blank"><button class="join">Read More</button></a>
+            <a href="https://apply.byupathway.edu/portal/user-profile/login?ReturnUrl=https%3a%2f%2fapply.byupathway.edu%2fportal%2fbyu-application-portal%2fwelcome-page" target="_blank"><button class="join">Apply</button></a>
             <button class="join">Connect</button>
             </div>
             </div>
@@ -49,7 +49,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi perspiciatis soluta sint explicabo quo facere dolores enim ipsa cumque atque voluptas nesciunt, temporibus, dignissimos sit placeat velit sequi odit distinctio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolores nihil sed quo ipsam repellat itaque animi culpa doloremque recusandae expedita tempore, inventore neque iure modi reiciendis tempora nisi soluta! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore dicta labore veritatis illo itaque praesentium, nemo cum deleniti laboriosam beatae laborum ipsam incidunt voluptates molestiae optio! Quia vitae provident in! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus at quaerat voluptate, facilis facere dicta ducimus inventore mollitia odio sunt eum asperiores ad sint voluptates dolore, repellat sapiente minus tempore! lorem</p>
             <div class="bt-options">
             <!-- <button class="join">Read More</button> -->
-            <button class="join">Join Us</button>
+            <a href="https://chat.whatsapp.com/LVWi6sZgqsrGhjDTGBMtOd?mode=wwt" target="_blank"><button class="join">Join Us</button></a>
             <button class="join">Connect</button>
             </div>
             </div>
@@ -64,7 +64,7 @@
             <div class="art-b">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi perspiciatis soluta sint explicabo quo facere dolores enim ipsa cumque atque voluptas nesciunt, temporibus, dignissimos sit placeat velit sequi odit distinctio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolores nihil sed quo ipsam repellat itaque animi culpa doloremque recusandae expedita tempore, inventore neque iure modi reiciendis tempora nisi soluta! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore dicta labore veritatis illo itaque praesentium, nemo cum deleniti laboriosam beatae laborum ipsam incidunt voluptates molestiae optio! Quia vitae provident in! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus at quaerat voluptate, facilis facere dicta ducimus inventore mollitia odio sunt eum asperiores ad sint voluptates dolore, repellat sapiente minus tempore! lorem</p>
             <div class="bt-options">
-            <a href="https://www.churchofjesuschrist.org/life/education/perpetual-education-fund?lang=eng"><button class="join">Read More</button></a>
+            <a href="https://www.churchofjesuschrist.org/life/education/perpetual-education-fund?lang=eng" target="_blank"><button class="join">Read More</button></a>
             <button class="join">Connect</button>
             </div>
             </div>
