--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feed The Nation | OE Design</title>
-    <meta name="description" content="We are here to feed your need, beacuause every man that has a brain has a purpose">
+    <meta name="description" content="We are here to meet your needs because every person with a brain has a purpose.">
     <link rel="stylesheet" href="desktop-view-styles.css">
     <link rel="stylesheet" href="tablet-view-styles.css">
     <link rel="stylesheet" href="mobile-view-styles.css">
