added footer to other pages

--- a/about.html
+++ b/about.html
@@ -39,7 +39,34 @@
         </div>
     </main>
     <footer>
-        <p>&copy;2025 OE Design</p>
+        <div class="footer-con">
+            <div class="logo">
+            <img src="images/flag.png" alt="">
+            </div>
+            <div class="social-media">
+                <p style="font-weight: bolder;">Social Media</p>
+                <a href="#" class="social-icon">Facebook</a>
+                <a href="#" class="social-icon">Twitter</a>
+                <a href="#" class="social-icon">Instagram</a>
+                <a href="#" class="social-icon">Youtube</a>
+                <a href="#" class="social-icon">LinkedIn</a>
+                <a href="#" class="social-icon">Tiktok</a>
+                <a href="#" class="social-icon">Pinterest</a>
+           </div>
+         <div class="quick-links">
+            <p style="font-weight: bolder;">Quick Links</p>
+            <a href="">FTN</a>
+            <a href="opportunities.html">Opportunities</a>
+            <a href="about.html">About</a>
+            <a href="">Give Back</a>
+         </div>
+         <div class="subscribe">
+            <p>Subscribe to our Newsletter</p>
+            <input type="email" placeholder="Enter your email"> <br>
+            <button type="submit">Subscribe</button>
+         </div>
+        </div>
+        <p style="text-align: center; margin-top: 15px;" >&copy;2025 OE Design</p>
     </footer>
 </body>
 </html>
